WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151201
ASSERTION FAILED: !rect.isEmpty() in WebCore::GraphicsContext::drawRect
https://bugs.webkit.org/show_bug.cgi?id=151201
Summary
ASSERTION FAILED: !rect.isEmpty() in WebCore::GraphicsContext::drawRect
Renata Hodovan
Reported
2015-11-12 10:37:20 PST
Created
attachment 265406
[details]
Test Load the attached test with debug MiniBrowser: <style> h3 { -webkit-border-before : 16in solid red; } * { -webkit-padding-start : 91%; margin: auto auto; } </style> <h3> <dt> <h3></h3> </dt> </h3> OS: Ubuntu 15.04 x86_64 Checked build: debug EFL Checked version: 08e34d6 Backtrace: ASSERTION FAILED: !rect.isEmpty() ../../Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp(236) : void WebCore::GraphicsContext::drawRect(const WebCore::FloatRect&, float) 1 0x7f80d0c35a9f WTFCrash 2 0x7f80d796c865 WebCore::GraphicsContext::drawRect(WebCore::FloatRect const&, float) 3 0x7f80d760bbfd WebCore::RenderElement::drawLineForBoxSide(WebCore::GraphicsContext&, WebCore::FloatRect const&, WebCore::BoxSide, WebCore::Color, WebCore::EBorderStyle, float, float, bool) const 4 0x7f80d75e9fa4 WebCore::RenderBoxModelObject::paintOneBorderSide(WebCore::GraphicsContext&, WebCore::RenderStyle const&, WebCore::RoundedRect const&, WebCore::RoundedRect const&, WebCore::LayoutRect const&, WebCore::BoxSide, WebCore::BoxSide, WebCore::BoxSide, WebCore::BorderEdge const*, WebCore::Path const*, WebCore::BackgroundBleedAvoidance, bool, bool, bool, WebCore::Color const*) 5 0x7f80d75ea3fd WebCore::RenderBoxModelObject::paintBorderSides(WebCore::GraphicsContext&, WebCore::RenderStyle const&, WebCore::RoundedRect const&, WebCore::RoundedRect const&, WebCore::IntPoint const&, WebCore::BorderEdge const*, unsigned int, WebCore::BackgroundBleedAvoidance, bool, bool, bool, WebCore::Color const*) 6 0x7f80d75ebe26 WebCore::RenderBoxModelObject::paintBorder(WebCore::PaintInfo const&, WebCore::LayoutRect const&, WebCore::RenderStyle const&, WebCore::BackgroundBleedAvoidance, bool, bool) 7 0x7f80d75bff02 WebCore::RenderBox::paintBoxDecorations(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 8 0x7f80d7559d9f WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 9 0x7f80d755906f WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 10 0x7f80d7559793 WebCore::RenderBlock::paintChild(WebCore::RenderBox&, WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool, WebCore::RenderBlock::PaintBlockType) 11 0x7f80d7559365 WebCore::RenderBlock::paintChildren(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool) 12 0x7f80d75592f2 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 13 0x7f80d7559fa1 WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 14 0x7f80d755906f WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 15 0x7f80d7559793 WebCore::RenderBlock::paintChild(WebCore::RenderBox&, WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool, WebCore::RenderBlock::PaintBlockType) 16 0x7f80d7559365 WebCore::RenderBlock::paintChildren(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool) 17 0x7f80d75592f2 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 18 0x7f80d7559fa1 WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 19 0x7f80d755906f WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 20 0x7f80d7559793 WebCore::RenderBlock::paintChild(WebCore::RenderBox&, WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool, WebCore::RenderBlock::PaintBlockType) 21 0x7f80d7559365 WebCore::RenderBlock::paintChildren(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool) 22 0x7f80d75592f2 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 23 0x7f80d7559fa1 WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 24 0x7f80d755906f WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 25 0x7f80d7559793 WebCore::RenderBlock::paintChild(WebCore::RenderBox&, WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool, WebCore::RenderBlock::PaintBlockType) 26 0x7f80d7559365 WebCore::RenderBlock::paintChildren(WebCore::PaintInfo&, WebCore::LayoutPoint const&, WebCore::PaintInfo&, bool) 27 0x7f80d75592f2 WebCore::RenderBlock::paintContents(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 28 0x7f80d7559fa1 WebCore::RenderBlock::paintObject(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 29 0x7f80d755906f WebCore::RenderBlock::paint(WebCore::PaintInfo&, WebCore::LayoutPoint const&) 30 0x7f80d768128f WebCore::RenderLayer::paintForegroundForFragmentsWithPhase(WebCore::PaintPhase, WTF::Vector<WebCore::LayerFragment, 1ul, WTF::CrashOnOverflow, 16ul> const&, WebCore::GraphicsContext&, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int, WebCore::RenderObject*) 31 0x7f80d7680e4a WebCore::RenderLayer::paintForegroundForFragments(WTF::Vector<WebCore::LayerFragment, 1ul, WTF::CrashOnOverflow, 16ul> const&, WebCore::GraphicsContext&, WebCore::GraphicsContext&, WebCore::LayoutRect const&, bool, WebCore::RenderLayer::LayerPaintingInfo const&, unsigned int, WebCore::RenderObject*, bool) Aborted (core dumped) Program terminated with signal SIGSEGV, Segmentation fault. #0 0x00007f80d0c35aa4 in WTFCrash () at ../../Source/WTF/wtf/Assertions.cpp:321 321 *(int *)(uintptr_t)0xbbadbeef = 0; #0 0x00007f80d0c35aa4 in WTFCrash () at ../../Source/WTF/wtf/Assertions.cpp:321 #1 0x00007f80d796c865 in WebCore::GraphicsContext::drawRect (this=0x7f80b3bb5870, rect=...) at ../../Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp:236 #2 0x00007f80d760bbfd in WebCore::RenderElement::drawLineForBoxSide (this=0x7f80b3bb7508, graphicsContext=..., rect=..., side=WebCore::BSTop, color=..., borderStyle=WebCore::SOLID, adjacentWidth1=0, adjacentWidth2=0, antialias=true) at ../../Source/WebCore/rendering/RenderElement.cpp:2001 #3 0x00007f80d75e9fa4 in WebCore::RenderBoxModelObject::paintOneBorderSide (this=0x7f80b3bb7508, graphicsContext=..., style=..., outerBorder=..., innerBorder=..., sideRect=..., side=WebCore::BSTop, adjacentSide1=WebCore::BSLeft, adjacentSide2=WebCore::BSRight, edges=0x7fffc2286ba0, path=0x0, bleedAvoidance=WebCore::BackgroundBleedNone, includeLogicalLeftEdge=true, includeLogicalRightEdge=true, antialias=true, overrideColor=0x0) at ../../Source/WebCore/rendering/RenderBoxModelObject.cpp:1460 #4 0x00007f80d75ea3fd in WebCore::RenderBoxModelObject::paintBorderSides (this=0x7f80b3bb7508, graphicsContext=..., style=..., outerBorder=..., innerBorder=..., innerBorderAdjustment=..., edges=0x7fffc2286ba0, edgeSet=1, bleedAvoidance=WebCore::BackgroundBleedNone, includeLogicalLeftEdge=true, includeLogicalRightEdge=true, antialias=true, overrideColor=0x0) at ../../Source/WebCore/rendering/RenderBoxModelObject.cpp:1501 #5 0x00007f80d75ebe26 in WebCore::RenderBoxModelObject::paintBorder (this=0x7f80b3bb7508, info=..., rect=..., style=..., bleedAvoidance=WebCore::BackgroundBleedNone, includeLogicalLeftEdge=true, includeLogicalRightEdge=true) at ../../Source/WebCore/rendering/RenderBoxModelObject.cpp:1739 #6 0x00007f80d75bff02 in WebCore::RenderBox::paintBoxDecorations (this=0x7f80b3bb7508, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBox.cpp:1355 #7 0x00007f80d7559d9f in WebCore::RenderBlock::paintObject (this=0x7f80b3bb7508, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1553 #8 0x00007f80d755906f in WebCore::RenderBlock::paint (this=0x7f80b3bb7508, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1420 #9 0x00007f80d7559793 in WebCore::RenderBlock::paintChild (this=0x7f80b3bb7450, child=..., paintInfo=..., paintOffset=..., paintInfoForChild=..., usePrintRect=false, paintType=WebCore::RenderBlock::PaintAsBlock) at ../../Source/WebCore/rendering/RenderBlock.cpp:1494 #10 0x00007f80d7559365 in WebCore::RenderBlock::paintChildren (this=0x7f80b3bb7450, paintInfo=..., paintOffset=..., paintInfoForChild=..., usePrintRect=false) at ../../Source/WebCore/rendering/RenderBlock.cpp:1461 #11 0x00007f80d75592f2 in WebCore::RenderBlock::paintContents (this=0x7f80b3bb7450, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1454 #12 0x00007f80d7559fa1 in WebCore::RenderBlock::paintObject (this=0x7f80b3bb7450, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1590 #13 0x00007f80d755906f in WebCore::RenderBlock::paint (this=0x7f80b3bb7450, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1420 #14 0x00007f80d7559793 in WebCore::RenderBlock::paintChild (this=0x7f80b3bb7398, child=..., paintInfo=..., paintOffset=..., paintInfoForChild=..., usePrintRect=false, paintType=WebCore::RenderBlock::PaintAsBlock) at ../../Source/WebCore/rendering/RenderBlock.cpp:1494 #15 0x00007f80d7559365 in WebCore::RenderBlock::paintChildren (this=0x7f80b3bb7398, paintInfo=..., paintOffset=..., paintInfoForChild=..., usePrintRect=false) at ../../Source/WebCore/rendering/RenderBlock.cpp:1461 #16 0x00007f80d75592f2 in WebCore::RenderBlock::paintContents (this=0x7f80b3bb7398, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1454 #17 0x00007f80d7559fa1 in WebCore::RenderBlock::paintObject (this=0x7f80b3bb7398, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1590 #18 0x00007f80d755906f in WebCore::RenderBlock::paint (this=0x7f80b3bb7398, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1420 #19 0x00007f80d7559793 in WebCore::RenderBlock::paintChild (this=0x7f80b3bb72e0, child=..., paintInfo=..., paintOffset=..., paintInfoForChild=..., usePrintRect=false, paintType=WebCore::RenderBlock::PaintAsBlock) at ../../Source/WebCore/rendering/RenderBlock.cpp:1494 #20 0x00007f80d7559365 in WebCore::RenderBlock::paintChildren (this=0x7f80b3bb72e0, paintInfo=..., paintOffset=..., paintInfoForChild=..., usePrintRect=false) at ../../Source/WebCore/rendering/RenderBlock.cpp:1461 #21 0x00007f80d75592f2 in WebCore::RenderBlock::paintContents (this=0x7f80b3bb72e0, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1454 #22 0x00007f80d7559fa1 in WebCore::RenderBlock::paintObject (this=0x7f80b3bb72e0, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1590 #23 0x00007f80d755906f in WebCore::RenderBlock::paint (this=0x7f80b3bb72e0, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1420 #24 0x00007f80d7559793 in WebCore::RenderBlock::paintChild (this=0x7f80b3bb7228, child=..., paintInfo=..., paintOffset=..., paintInfoForChild=..., usePrintRect=false, paintType=WebCore::RenderBlock::PaintAsBlock) at ../../Source/WebCore/rendering/RenderBlock.cpp:1494 #25 0x00007f80d7559365 in WebCore::RenderBlock::paintChildren (this=0x7f80b3bb7228, paintInfo=..., paintOffset=..., paintInfoForChild=..., usePrintRect=false) at ../../Source/WebCore/rendering/RenderBlock.cpp:1461 #26 0x00007f80d75592f2 in WebCore::RenderBlock::paintContents (this=0x7f80b3bb7228, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1454 #27 0x00007f80d7559fa1 in WebCore::RenderBlock::paintObject (this=0x7f80b3bb7228, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1590 #28 0x00007f80d755906f in WebCore::RenderBlock::paint (this=0x7f80b3bb7228, paintInfo=..., paintOffset=...) at ../../Source/WebCore/rendering/RenderBlock.cpp:1420 #29 0x00007f80d768128f in WebCore::RenderLayer::paintForegroundForFragmentsWithPhase (this=0x7f80b3afe7e0, phase=WebCore::PaintPhaseChildBlockBackgrounds, layerFragments=..., context=..., localPaintingInfo=..., paintBehavior=0, subtreePaintRootForRenderer=0x0) at ../../Source/WebCore/rendering/RenderLayer.cpp:4735 #30 0x00007f80d7680e4a in WebCore::RenderLayer::paintForegroundForFragments (this=0x7f80b3afe7e0, layerFragments=..., context=..., transparencyLayerContext=..., transparencyPaintDirtyRect=..., haveTransparency=false, localPaintingInfo=..., paintBehavior=0, subtreePaintRootForRenderer=0x0, selectionOnly=false) at ../../Source/WebCore/rendering/RenderLayer.cpp:4696 #31 0x00007f80d767f0a1 in WebCore::RenderLayer::paintLayerContents (this=0x7f80b3afe7e0, originalContext=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4328 #32 0x00007f80d767d87f in WebCore::RenderLayer::paintLayerContentsAndReflection (this=0x7f80b3afe7e0, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:3984 #33 0x00007f80d767d75c in WebCore::RenderLayer::paintLayer (this=0x7f80b3afe7e0, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:3966 #34 0x00007f80d767f915 in WebCore::RenderLayer::paintList (this=0x7f80b3afe5a0, list=0x7f80b3ba6d90, context=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4433 #35 0x00007f80d767f16e in WebCore::RenderLayer::paintLayerContents (this=0x7f80b3afe5a0, originalContext=..., paintingInfo=..., paintFlags=96) at ../../Source/WebCore/rendering/RenderLayer.cpp:4339 #36 0x00007f80d76a59a4 in WebCore::RenderLayerBacking::paintIntoLayer (this=0x7f80b3bd9498, graphicsLayer=0x7f80b382e000, context=..., paintDirtyRect=..., paintBehavior=0, paintingPhase=3) at ../../Source/WebCore/rendering/RenderLayerBacking.cpp:2303 #37 0x00007f80d76a5d0e in WebCore::RenderLayerBacking::paintContents (this=0x7f80b3bd9498, graphicsLayer=0x7f80b382e000, context=..., paintingPhase=3, clip=...) at ../../Source/WebCore/rendering/RenderLayerBacking.cpp:2341 #38 0x00007f80d748d7ee in WebCore::GraphicsLayer::paintGraphicsLayerContents (this=0x7f80b382e000, context=..., clip=...) at ../../Source/WebCore/platform/graphics/GraphicsLayer.cpp:413 #39 0x00007f80d79fd097 in WebCore::CoordinatedGraphicsLayer::tiledBackingStorePaint (this=0x7f80b382e000, context=..., rect=...) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:876 #40 0x00007f80d83cdb52 in WebCore::Tile::paintToSurfaceContext (this=0x1414250, context=...) at ../../Source/WebCore/platform/graphics/texmap/coordinated/Tile.cpp:100 #41 0x00007f80d7a07e0f in WebCore::UpdateAtlasSurfaceClient::paintToSurfaceContext (this=0x7fffc22888d0, context=...) at ../../Source/WebCore/platform/graphics/texmap/coordinated/UpdateAtlas.cpp:50 #42 0x00007f80d6a64317 in WebKit::WebCoordinatedSurface::paintToSurface (this=0x7f80b3ba5370, rect=..., client=0x7fffc22888d0) at ../../Source/WebKit2/Shared/CoordinatedGraphics/WebCoordinatedSurface.cpp:190 #43 0x00007f80d7a07b4f in WebCore::UpdateAtlas::paintOnAvailableBuffer (this=0x13fd100, size=..., atlasID=@0x7fffc2288a30: 1, offset=..., client=0x1414250) at ../../Source/WebCore/platform/graphics/texmap/coordinated/UpdateAtlas.cpp:110 #44 0x00007f80d79f1832 in WebCore::CompositingCoordinator::paintToSurface (this=0x7f80b3ae0000, size=..., flags=0, atlasID=@0x7fffc2288a30: 1, offset=..., client=0x1414250) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CompositingCoordinator.cpp:375 #45 0x00007f80d79fd578 in WebCore::CoordinatedGraphicsLayer::paintToSurface (this=0x7f80b382e000, size=..., atlas=@0x7fffc2288a30: 1, offset=..., client=0x1414250) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:926 #46 0x00007f80d83cd8fa in WebCore::Tile::updateBackBuffer (this=0x1414250) at ../../Source/WebCore/platform/graphics/texmap/coordinated/Tile.cpp:75 #47 0x00007f80d7a026fd in WebCore::TiledBackingStore::updateTileBuffers (this=0x7f80b3ba4c78) at ../../Source/WebCore/platform/graphics/texmap/coordinated/TiledBackingStore.cpp:100 #48 0x00007f80d7a03038 in WebCore::TiledBackingStore::createTiles (this=0x7f80b3ba4c78, visibleRect=..., scaledContentsRect=...) at ../../Source/WebCore/platform/graphics/texmap/coordinated/TiledBackingStore.cpp:234 #49 0x00007f80d7a023ef in WebCore::TiledBackingStore::createTilesIfNeeded (this=0x7f80b3ba4c78, unscaledVisibleRect=..., contentsRect=...) at ../../Source/WebCore/platform/graphics/texmap/coordinated/TiledBackingStore.cpp:64 #50 0x00007f80d79fdaba in WebCore::CoordinatedGraphicsLayer::updateContentBuffers (this=0x7f80b382e000) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:995 #51 0x00007f80d79fd8d8 in WebCore::CoordinatedGraphicsLayer::updateContentBuffersIncludingSubLayers (this=0x7f80b382e000) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:967 #52 0x00007f80d79fd929 in WebCore::CoordinatedGraphicsLayer::updateContentBuffersIncludingSubLayers (this=0x7f80b3848cc0) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:970 #53 0x00007f80d79fd929 in WebCore::CoordinatedGraphicsLayer::updateContentBuffersIncludingSubLayers (this=0x7f80b381d180) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:970 #54 0x00007f80d79f012b in WebCore::CompositingCoordinator::flushPendingLayerChanges (this=0x7f80b3ae0000) at ../../Source/WebCore/platform/graphics/texmap/coordinated/CompositingCoordinator.cpp:99 #55 0x00007f80d6b179ba in WebKit::CoordinatedLayerTreeHost::performScheduledLayerFlush (this=0x7f80b3be2210) at ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:212 #56 0x00007f80d6b17a72 in WebKit::CoordinatedLayerTreeHost::layerFlushTimerFired (this=0x7f80b3be2210) at ../../Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:227 #57 0x00007f80d6b192bb in std::_Mem_fn<void (WebKit::CoordinatedLayerTreeHost::*)()>::operator()<, void>(WebKit::CoordinatedLayerTreeHost*) const (this=0x13639f0, __object=0x7f80b3be2210) at /usr/include/c++/4.9/functional:569 #58 0x00007f80d6b1916d in std::_Bind<std::_Mem_fn<void (WebKit::CoordinatedLayerTreeHost::*)()> (WebKit::CoordinatedLayerTreeHost*)>::__call<void, , 0ul>(std::tuple<>&&, std::_Index_tuple<0ul>) (this=0x13639f0, __args=<unknown type in webkit/WebKitBuild/Debug/lib/libewebkit2.so.1, CU 0x105be6f6, DIE 0x107312b0>) at /usr/include/c++/4.9/functional:1264 #59 0x00007f80d6b18fe5 in std::_Bind<std::_Mem_fn<void (WebKit::CoordinatedLayerTreeHost::*)()> (WebKit::CoordinatedLayerTreeHost*)>::operator()<, void>() (this=0x13639f0) at /usr/include/c++/4.9/functional:1323 #60 0x00007f80d6b18d3e in std::_Function_handler<void (), std::_Bind<std::_Mem_fn<void (WebKit::CoordinatedLayerTreeHost::*)()> (WebKit::CoordinatedLayerTreeHost*)> >::_M_invoke(std::_Any_data const&) (__functor=...) at /usr/include/c++/4.9/functional:2039 #61 0x00007f80d657c182 in std::function<void ()>::operator()() const (this=0x7f80b3be2280) at /usr/include/c++/4.9/functional:2439 #62 0x00007f80d662899a in WebCore::Timer::fired (this=0x7f80b3be2248) at ../../Source/WebCore/platform/Timer.h:133 #63 0x00007f80d741dc71 in WebCore::ThreadTimers::sharedTimerFiredInternal (this=0x7f80b3bd6258) at ../../Source/WebCore/platform/ThreadTimers.cpp:121 #64 0x00007f80d741d85f in WebCore::ThreadTimers::<lambda()>::operator()(void) const (__closure=0x1362e30) at ../../Source/WebCore/platform/ThreadTimers.cpp:73 #65 0x00007f80d741de82 in std::_Function_handler<void(), WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::<lambda()> >::_M_invoke(const std::_Any_data &) (__functor=...) at /usr/include/c++/4.9/functional:2039 #66 0x00007f80d657c182 in std::function<void ()>::operator()() const (this=0x7f80dc30bc68 <WebCore::MainThreadSharedTimer::singleton()::instance+8>) at /usr/include/c++/4.9/functional:2439 #67 0x00007f80d81b7a89 in WebCore::MainThreadSharedTimer::fired (this=0x7f80dc30bc60 <WebCore::MainThreadSharedTimer::singleton()::instance>) at ../../Source/WebCore/platform/MainThreadSharedTimer.cpp:52 #68 0x00007f80d83c0810 in WebCore::timerEvent () at ../../Source/WebCore/platform/efl/MainThreadSharedTimerEfl.cpp:44 #69 0x00007f80ce5f3d1e in _ecore_call_task_cb (data=<optimized out>, func=<optimized out>) at lib/ecore/ecore_private.h:336 #70 _ecore_timer_expired_call (when=1155510.287246078) at lib/ecore/ecore_timer.c:733 #71 0x00007f80ce5f3e6b in _ecore_timer_expired_timers_call (when=1155510.287246078) at lib/ecore/ecore_timer.c:686 #72 0x00007f80ce5efb41 in _ecore_main_loop_iterate_internal (once_only=once_only@entry=0) at lib/ecore/ecore_main.c:1812 #73 0x00007f80ce5effc7 in ecore_main_loop_begin () at lib/ecore/ecore_main.c:983 #74 0x00007f80d0c90995 in WTF::RunLoop::run () at ../../Source/WTF/wtf/efl/RunLoopEfl.cpp:49 #75 0x00007f80d6b1cc11 in WebKit::ChildProcessMain<WebKit::WebProcess, WebKit::WebProcessMain> (argc=2, argv=0x7fffc2289358) at ../../Source/WebKit2/Shared/unix/ChildProcessMain.h:61 #76 0x00007f80d6b1c81f in WebKit::WebProcessMainUnix (argc=2, argv=0x7fffc2289358) at ../../Source/WebKit2/WebProcess/efl/WebProcessMainEfl.cpp:161 #77 0x00000000004008ea in main (argc=2, argv=0x7fffc2289358) at ../../Source/WebKit2/WebProcess/EntryPoint/unix/WebProcessMain.cpp:44
Attachments
Test
(177 bytes, text/html)
2015-11-12 10:37 PST
,
Renata Hodovan
no flags
Details
Patch
(3.64 KB, patch)
2015-12-11 14:03 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.38 KB, patch)
2015-12-11 15:35 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-12-11 14:03:47 PST
Created
attachment 267187
[details]
Patch
alan
Comment 2
2015-12-11 15:35:50 PST
Created
attachment 267194
[details]
Patch
WebKit Commit Bot
Comment 3
2015-12-11 19:26:59 PST
Comment on
attachment 267194
[details]
Patch Clearing flags on attachment: 267194 Committed
r194002
: <
http://trac.webkit.org/changeset/194002
>
WebKit Commit Bot
Comment 4
2015-12-11 19:27:04 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug