ASSERTION FAILED: !rect.isEmpty() in WebCore::GraphicsContext::drawRect https://bugs.webkit.org/show_bug.cgi?id=151201

Reviewed by Simon Fraser.

Drawing empty rect is a waste.

Source/WebCore:

Test: fast/borders/empty-drawrect-assert-after-pixelsnap.html

* rendering/RenderElement.cpp:
(WebCore::RenderElement::drawLineForBoxSide):

LayoutTests:

* fast/borders/empty-drawrect-assert-after-pixelsnap-expected.txt: Added.
* fast/borders/empty-drawrect-assert-after-pixelsnap.html: Added.


Canonical link: https://commits.webkit.org/170328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194002 268f45cc-cd09-0410-ab3c-d52691b4dbfc